Add python patch html doc files, add to index.html's
HTML files downloaded from:
 - http://sizer99.com/tf/topics/
 - http://sizer99.com/tf/commands/

--- a/htmldoc/commands/index.html
+++ b/htmldoc/commands/index.html
@@ -72,6 +72,7 @@
   <li>&#160;<a href="../commands/purge.html">PURGE</a>
   <li>&#160;<a href="../commands/purgeworld.html">PURGEWORLD</a>
   <li>&#160;<a href="../commands/putfile.html">PUTFILE</a>
+  <li>+<a href="../commands/python.html">PYTHON</a>
   <li>*<a href="../commands/quit.html">QUIT</a>
   <li>*<a href="../commands/quote.html">QUOTE</a>
   <li>&#160;<a href="../commands/quoter.html">quoter.tf</a>
