--- a/htmldoc/topics/index.html
+++ b/htmldoc/topics/index.html
@@ -47,6 +47,8 @@
  *<a href="../topics/tfio.html">tfio</a>		output, error, and world streams
  *<a href="../topics/proxy.html">proxy</a>		connecting to outside hosts via a proxy server (firewall)
  +<a href="../topics/locale.html">locale</a>	multi-language support
+ +<a href="../topics/tf_python.html">python</a>	python commands
+ +<a href="../topics/tf_module.html">python module</a>	'import tf' python module
   </pre>
 
 <p>
